# gvol-py

./: .flake8  .gitignore  .readthedocs.yaml  README.md  README.rst  Untitled.ipynb  Untitled1.ipynb  pyproject.toml
.github/workflows/: main.yml  pypi.yml  python-package.yml
docs/source/: conf.py  index.rst  reference.rst
docs/source/_autosummary/: gvol.GVol.rst
docs/source/_templates/: custom-class-template.rst
gvol/: __init__.py  client.py  queries.py  types.py
gvolpy/: pyvenv.cfg
tests/: test_gvol.py
