[tool.poetry]
name = "gvol"
version = "0.2.25"
description = "GVol is a Python library to access the GVol API"
authors = ["Denys Halenok <denys.halenok@gmail.com>"]

readme = "README.md"

homepage = "https://github.com/genesis-volatility/gvol-py"
repository = "https://github.com/genesis-volatility/gvol-py"
documentation = "https://gvol.readthedocs.io/"

classifiers = [
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10"
]

[tool.poetry.dependencies]
python = "^3.7"
gql = {version = "3.0.0rc0", extras = ["requests"]}
typing-extensions = {version = "^4.0.1", python = "~3.7"}

sphinx = {version = "^4.3.2", optional = true}
sphinx-rtd-theme = {version = "^1.0.0", optional = true}

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
black = "^21.12b0"
isort = "^5.10.1"
flake8 = "^4.0.1"
mypy = "^0.930"

[tool.isort]
profile = "black"

[tool.poetry.extras]
docs = ["sphinx", "sphinx-rtd-theme"]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/genesis-volatility/gvol-py/issues"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
